--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,15 +14,21 @@
             <a href="/" class="logo">Notes app</a>
             <div class="menu-div">
                 <ul>
-                    <li>
-                        <a href="/sign-up">Sign up</a>
-                    </li>
-                    <li>
-                        <a href="/login">Login</a>
-                    </li>
-                    <li>
-                        <a href="/logout">Logout</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="/">Home</a>
+                        </li>
+                        <li>
+                            <a href="/logout">Logout</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="/sign-up">Sign up</a>
+                        </li>
+                        <li>
+                            <a href="/login">Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
