--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,14 +9,24 @@ Home
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                <form action="">
-                    <input type="text" class="todo-input" required placeholder="Type your notes here">
-                    <button type="submit" class="todo-btn btn btn-main">+ Add note</button>
-                </form>
-                <div class="todo-container">
-                    <ul class="todo-list">
-                    </ul>
-                </div>
+                    <h2>Your notes</h2>
+                    <div class="todo-container">
+                        <ul class="todo-list">
+                            {% for note in user.notes %}
+                                <li class="todo">{{ note.id }}. {{ note.text }} created on {{ note.date }}
+                                    <button class="delete-btn" onclick="deleteNote({{ note.id }})">&times;</button>
+                                </li>
+                            {% else %}
+                                <div class="alert success ml-n2">
+                                    You don't have any notes. Add below.
+                                </div>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <form method="POST">
+                        <input type="text" class="todo-input" name="note" placeholder="Type your notes here">
+                        <button type="submit" class="todo-btn btn btn-main">+ Add note</button>
+                    </form>
                 </div>
             </div>
         </div>
